--- a/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.html
+++ b/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.html
@@ -1,45 +1,63 @@
 <div class="main-container">
-  <p-card header="Actividades" subheader="Subtítulo">
-    <!-- Autocomplete para actividad -->
+  <p-card header="Actividades">
+    <!-- Filtro por actividad -->
     <div class="label-container">
       <p-floatlabel>
-        <p-autocomplete [(ngModel)]="puestoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" 
-                        [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" filter="true" 
-                        optionLabel="label" placeholder="Seleccionar Actividad" [dropdown]="true" />
+        <p-autocomplete [(ngModel)]="puestoSeleccionado" 
+                        [suggestions]="filteredItems" 
+                        (completeMethod)="filterItems($event)" 
+                        optionLabel="label" 
+                        placeholder="Seleccionar Actividad" [dropdown]="true">
+        </p-autocomplete>
       </p-floatlabel>
     </div>
 
-    <!-- Autocomplete para departamento -->
+    <!-- Filtro por departamento -->
     <div class="label-container">
       <p-floatlabel>
-        <p-autocomplete [(ngModel)]="puestoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" 
-                        [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" filter="true" 
-                        optionLabel="label" placeholder="Seleccionar Departamento" [dropdown]="true" />
+        <p-autocomplete [(ngModel)]="departamentoSeleccionado" 
+                        [suggestions]="filteredItems" 
+                        (completeMethod)="filterItems($event)" 
+                        optionLabel="label" 
+                        placeholder="Seleccionar Departamento" [dropdown]="true">
+        </p-autocomplete>
       </p-floatlabel>
     </div>
 
     <h3><p-divider align="left" type="solid"><b>Asignar Empleado</b></p-divider></h3>
 
-    <!-- Tabla de empleados con participación y checkbox -->
+    <!-- Tabla de empleados con checkbox -->
     <p-table [value]="empleados">
-        <ng-template pTemplate="body" let-emp let-i="rowIndex">
-          <tr>
-            <td>{{ emp.actividad }}</td>
-            <td>{{ emp.nombreEmpleado }}</td>
-            <td>
-              <p-checkbox 
-                [(ngModel)]="emp.participacion" 
-                (onChange)="editarParticipacion(emp)" 
-                [binary]="true">
-              </p-checkbox>
-            </td>
-          </tr>
-        </ng-template>
-      </p-table>
-      
-      <div class="contenedor-botones">
-        <button class="boton" pButton pRipple severity="info" (click)="activarEdicion()">
-          <span pButtonLabel>Editar</span>
-        </button>
-      </div>
-      
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Actividad</th>
+          <th>Nombre del Empleado</th>
+          <th>Participación</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-emp>
+        <tr>
+          <td>{{ emp.actividad }}</td>
+          <td>{{ emp.nombreEmpleado }}</td>
+          <td>
+            <p-checkbox [(ngModel)]="emp.participacion" 
+                        [disabled]="!edicionHabilitada"
+                        binary="true">
+            </p-checkbox>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+
+    <!-- Botones de edición y guardado -->
+    <div class="contenedor-botones">
+      <button pButton pRipple severity="info" (click)="activarEdicion()">
+        <span *ngIf="!edicionHabilitada">Editar</span>
+        <span *ngIf="edicionHabilitada">Cancelar</span>
+      </button>
+      <button pButton pRipple severity="success" (click)="guardarCambios()" *ngIf="edicionHabilitada">
+        Guardar
+      </button>
+    </div>
+  </p-card>
+</div>
