--- a/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.html
+++ b/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.html
@@ -37,34 +37,59 @@
 </p-floatlabel>
 </div>
 <div class="label-container">
-  <p-floatlabel>  
-<p-autocomplete [(ngModel)]="puestoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" filter="true" optionLabel="label" placeholder="Puesto" [dropdown]="true" />
+  <p-floatlabel variant="on">
+<p-autocomplete [(ngModel)]="puestoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" filter="true" optionLabel="label" [dropdown]="true" />
+<label for="Puesto">Puesto</label>
 </p-floatlabel>
 </div>
 <div class="label-container">
-<p-floatlabel >  
-<p-autocomplete [(ngModel)]="departamentoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" optionLabel="label" placeholder="Departamento" [dropdown]="true" />
+<p-floatlabel variant="on" >  
+<p-autocomplete [(ngModel)]="departamentoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" optionLabel="label" [dropdown]="true" />
+<label for="Departamento">Departamento</label>
 </p-floatlabel>
 </div>
+ <!-- Teléfonos -->
+ <div class="label-container">
+  
+  <button pButton label="+" (click)="agregarTelefonoU()" icon="pi pi-plus" class="p-button-text"></button>
+ 
+  <div *ngFor="let telefono of usuario.Telefonos; let j = index; trackBy: trackByFn " class="telefono-item">
+    <p-floatlabel variant="on" class="telefono-container">
+      <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="usuario.Telefonos[j]"/>
+      <label for="">Teléfono</label>
+    <button pButton *ngIf="usuario.Telefonos.length > 1" (click)="eliminarTelefono(j)" icon="pi pi-trash" class="p-button-danger p-button-text eliminar-btn" aria-label="Eliminar telefono"></button>
+  </p-floatlabel>
+  </div>
+</div>
+
+
+<!-- Correos -->
 <div class="label-container">
-<p-floatlabel variant="on">
-  <input pInputText id="on_label" autocomplete="off" pKeyFilter="num" />
-  <label for="on_label">Teléfono</label>
+  <button pButton label="+" (click)="agregarCorreoU()" icon="pi pi-plus" class="p-button-text"></button>
+
+<div *ngFor="let correo of usuario.Correos; let k = index; trackBy: trackByFn" class="correo-item">
+  <p-floatlabel variant="on" class="correo-container">
+    <input type="email" pInputText [(ngModel)]="usuario.Correos[k]" />
+    <label for="">Correo Electrónico</label>
+    <button pButton *ngIf="usuario.Correos.length > 1" (click)="eliminarCorreo(k)" icon="pi pi-trash" class="p-button-danger p-button-text eliminar-btn" aria-label="Eliminar correo"></button>
+  </p-floatlabel>
+</div>
+</div>
+
+<div class="label-container">
+  <p-floatlabel variant="on">
+<p-autocomplete [(ngModel)]="sexoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItemsSexo" [virtualScrollItemSize]="34" (completeMethod)="filterItemssSexo($event)" filter="true" optionLabel="label"  [dropdown]="true" />
+<label for="on_label">Sexo</label>
 </p-floatlabel>
 </div>
 
 <div class="label-container">
-<p-floatlabel variant="on">
-  <input type="email" pInputText id="on_label" autocomplete="off" />
-  <label for="on_label">Correo Electrónico</label>
+  <p-floatlabel variant="on">
+<p-autocomplete [(ngModel)]="RolSeleccionado" [virtualScroll]="true" [suggestions]="filteredItemsRol" [virtualScrollItemSize]="34" (completeMethod)="filterItemssRol($event)" filter="true" optionLabel="label"  [dropdown]="true" />
+<label for="on_label">Rol</label>
 </p-floatlabel>
 </div>
 
-
-<p-floatlabel variant="on">
-  <p-datepicker inputId="on_label" showIcon iconDisplay="input" />
-  <label for="on_label">Fecha Inicio</label>
-</p-floatlabel>
 
 
 
@@ -115,36 +140,59 @@
 </p-fieldset>
 
 <h3> <p-divider align="left" type="solid">
-  <b>Información Personal</b>
+  <b>Información Familiar</b>
   </p-divider></h3>
+  <h3>Familiares</h3>
 
-  <div class="contenedor-botones">
-<button pButton pRipple severity="info">
-  ➕
-    <span pButtonLabel>Agregar</span></button></div>
-
-<p-table [tableStyle]="{ 'min-width': '50rem' }">
-  <ng-template #header>
+  <!-- Botón para agregar una nueva fila de dependiente -->
+  <button pButton label="Agregar Dependiente" (click)="agregarDependiente()" icon="pi pi-plus"></button>
+  
+  <!-- Tabla de familiares -->
+  <p-table [value]="dependientes" responsiveLayout="scroll">
+    <ng-template pTemplate="header">
       <tr>
-          <th>Code</th>
-          <th>Name</th>
-          <th>Category</th>
-          <th>Quantity</th>
+        <th>Nombre</th>
+        <th>Parentesco</th>
+        <th>Teléfonos</th>
+        <th>Correos</th>
+        <th>Acciones</th>
       </tr>
-  </ng-template>
-  <ng-template #body let-product>
+    </ng-template>
+  
+    <ng-template pTemplate="body" let-dependiente let-i="rowIndex">
       <tr>
-          <td><p-skeleton /></td>
-          <td><p-skeleton /></td>
-          <td><p-skeleton /></td>
-          <td><p-skeleton /></td>
-      </tr>
-  </ng-template>
-</p-table>
+        <td>
+          <input pInputText [(ngModel)]="dependiente.nombreFamiliar" placeholder="Nombre del familiar" />
+        </td>
+        <td>
+          <input pInputText [(ngModel)]="dependiente.parentesco" placeholder="Parentesco" />
+        </td>
+        <td>
+          <div *ngFor="let telefono of dependiente.telefonos; let j = index">
+            <input pInputText [(ngModel)]="dependiente.telefonos[j]" placeholder="Teléfono" />
+          </div>
+          <button pButton label="+" (click)="agregarTelefono(dependiente)" icon="pi pi-plus" class="p-button-text"></button>
+        </td>
+        <td>
+          <div *ngFor="let correo of dependiente.correos; let k = index">
+            <input pInputText [(ngModel)]="dependiente.correos[k]" placeholder="Correo" />
+          </div>
+          <button pButton label="+" (click)="agregarCorreo(dependiente)" icon="pi pi-plus" class="p-button-text"></button>
+        </td>
+        <td>
 
+            <!-- Botón Guardar -->
+            <button *ngIf="dependiente.editando" pButton type="button" (click)="guardarDependiente(dependiente)" icon="pi pi-check" class="p-button-success p-button-sm"></button>
+          
+          <button *ngIf="!dependiente.editando" pButton (click)="eliminarDependiente(i)" icon="pi pi-trash" class="p-button-danger"></button>
+          
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+ 
 <div class="contenedor-botones">
   <button class="boton" pButton pRipple aria-label="Buscar" severity="info" (click)="redirigir()">
     <span pButtonLabel>Guardar</span>
   </button>
 </div>
-
