--- a/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.scss
+++ b/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.scss
@@ -17,7 +17,7 @@
    
   }
 
-input,label,p-inputmask , p-autocomplete, p-datepicker {
+input,label,p-password,p-inputmask , p-autocomplete, p-datepicker {
     width: 80%; 
     box-sizing: border-box; /* Asegura que el padding no afecte el ancho */
     margin-left: 35px;
