--- a/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.html
+++ b/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.html
@@ -5,13 +5,13 @@
     
      
     <p-floatlabel  variant="on">
-      <input type="text" pInputText  id="nombre" autocomplete="off"/>
+      <input type="text" pInputText  id="nombre" [(ngModel)]="nuevoEmpleado.Nombre" name="nombre" required autocomplete="off"/>
       <label for="nombre">Nombre</label>
   </p-floatlabel> 
 
   <div class="label-container">
     <p-floatlabel variant="on">
-      <input type="text" pInputText id="ApP" autocomplete="off"  />
+      <input type="text" pInputText id="ApP" [(ngModel)]="nuevoEmpleado.ApP" name="apP" required autocomplete="off"  />
       <label for="ApP">Apellido Paterno</label>
   </p-floatlabel>
 </div>
@@ -19,32 +19,36 @@
 
 <div class="label-container">
     <p-floatlabel variant="on">
-      <input type="text" pInputText id="apM" autocomplete="off" />
+      <input type="text" pInputText id="apM" [(ngModel)]="nuevoEmpleado.ApM" name="apM" required autocomplete="off" />
       <label for="apM">Apellido Materno</label>
   </p-floatlabel>
 </div>
+
 <div class="label-container">
    <p-floatlabel variant="on">
-    <p-datepicker inputId="FechaNacimiento" showIcon iconDisplay="input" />
+    <p-datepicker inputId="FechaNacimiento" [(ngModel)]="nuevoEmpleado.FechaNacimiento" showIcon iconDisplay="input" />
     <label for="FechaNacimiento">Fecha Nacimiento</label>
 </p-floatlabel>
 </div>
   
 <div class="label-container">
     <p-floatlabel variant="on">
-      <input pInputText id="RFC" autocomplete="off" pKeyFilter="alphanum" />
+      <input pInputText id="RFC" [(ngModel)]="nuevoEmpleado.RFC" autocomplete="off" apppKeyFilter="alphanum" />
       <label for="RFC">RFC</label>
 </p-floatlabel>
 </div>
+
 <div class="label-container">
   <p-floatlabel variant="on">
-<p-autocomplete [(ngModel)]="puestoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" filter="true" optionLabel="label" [dropdown]="true" />
+<p-autocomplete [(ngModel)]="nuevoEmpleado.Puesto" [virtualScroll]="true" [suggestions]="filteredItemsPuesto" [virtualScrollItemSize]="34" (completeMethod)="filterItemsPuesto($event)" filter="true" optionLabel="label" [dropdown]="true" />
 <label for="Puesto">Puesto</label>
 </p-floatlabel>
 </div>
+
+
 <div class="label-container">
 <p-floatlabel variant="on" >  
-<p-autocomplete [(ngModel)]="departamentoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" optionLabel="label" [dropdown]="true" />
+<p-autocomplete [(ngModel)]="nuevoEmpleado.Departamento" [virtualScroll]="true" [suggestions]="filteredItemsDepartamento" [virtualScrollItemSize]="34" (completeMethod)="filterItemsDepartamento($event)" optionLabel="label" [dropdown]="true" />
 <label for="Departamento">Departamento</label>
 </p-floatlabel>
 </div>
@@ -53,11 +57,11 @@
   
   <button pButton label="+" (click)="agregarTelefonoU()" icon="pi pi-plus" class="p-button-text"></button>
  
-  <div *ngFor="let telefono of usuario.Telefonos; let j = index; trackBy: trackByFn " class="telefono-item">
+  <div *ngFor="let telefono of nuevoEmpleado.Telefono; let j = index; trackBy: trackByFn " class="telefono-item">
     <p-floatlabel variant="on" class="telefono-container">
-      <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="usuario.Telefonos[j]"/>
+      <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="nuevoEmpleado.Telefono[j]"/>
       <label for="">Teléfono</label>
-    <button pButton *ngIf="usuario.Telefonos.length > 1" (click)="eliminarTelefono(j)" icon="pi pi-trash" class="p-button-danger p-button-text eliminar-btn" aria-label="Eliminar telefono"></button>
+    <button pButton *ngIf="nuevoEmpleado.Telefono.length > 1" (click)="eliminarTelefonoU(j)" icon="pi pi-trash" class="p-button-danger p-button-text eliminar-btn" aria-label="Eliminar telefono"></button>
   </p-floatlabel>
   </div>
 </div>
@@ -67,29 +71,36 @@
 <div class="label-container">
   <button pButton label="+" (click)="agregarCorreoU()" icon="pi pi-plus" class="p-button-text"></button>
 
-<div *ngFor="let correo of usuario.Correos; let k = index; trackBy: trackByFn" class="correo-item">
+<div *ngFor="let correo of nuevoEmpleado.CorreoElectronico; let k = index; trackBy: trackByFn" class="correo-item">
   <p-floatlabel variant="on" class="correo-container">
-    <input type="email" pInputText [(ngModel)]="usuario.Correos[k]" />
+    <input type="email" pInputText [(ngModel)]="nuevoEmpleado.CorreoElectronico[k]"  />
     <label for="">Correo Electrónico</label>
-    <button pButton *ngIf="usuario.Correos.length > 1" (click)="eliminarCorreo(k)" icon="pi pi-trash" class="p-button-danger p-button-text eliminar-btn" aria-label="Eliminar correo"></button>
+    <button pButton *ngIf="nuevoEmpleado.CorreoElectronico.length > 1" (click)="eliminarCorreo(k)" icon="pi pi-trash" class="p-button-danger p-button-text eliminar-btn" aria-label="Eliminar correo"></button>
   </p-floatlabel>
 </div>
 </div>
 
 <div class="label-container">
   <p-floatlabel variant="on">
-<p-autocomplete [(ngModel)]="sexoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItemsSexo" [virtualScrollItemSize]="34" (completeMethod)="filterItemssSexo($event)" filter="true" optionLabel="label"  [dropdown]="true" />
+<p-autocomplete [(ngModel)]="nuevoEmpleado.Sexo" [virtualScroll]="true" [suggestions]="filteredItemsSexo" [virtualScrollItemSize]="34" (completeMethod)="filterItemssSexo($event)" filter="true" optionLabel="label"  [dropdown]="true" />
 <label for="on_label">Sexo</label>
 </p-floatlabel>
 </div>
 
 <div class="label-container">
   <p-floatlabel variant="on">
-<p-autocomplete [(ngModel)]="RolSeleccionado" [virtualScroll]="true" [suggestions]="filteredItemsRol" [virtualScrollItemSize]="34" (completeMethod)="filterItemssRol($event)" filter="true" optionLabel="label"  [dropdown]="true" />
+<p-autocomplete [(ngModel)]="nuevoEmpleado.Rol" [virtualScroll]="true" [suggestions]="filteredItemsRol" [virtualScrollItemSize]="34" (completeMethod)="filterItemssRol($event)" filter="true" optionLabel="label"  [dropdown]="true" />
 <label for="on_label">Rol</label>
 </p-floatlabel>
 </div>
 
+
+<div class="label-container">
+  <p-floatlabel variant="on">
+    <p-password id="password" [toggleMask]="true" [(ngModel)]="nuevoEmpleado.Password" />
+    <label for="password">Contraseña</label>
+  </p-floatlabel>
+</div>
 
 
 
@@ -102,38 +113,39 @@
       
       <div class="label-container">
     <p-floatlabel>  
-  <p-autocomplete [(ngModel)]="ciudadSeleccionada" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" optionLabel="label" placeholder="Ciudad" [dropdown]="true" />
+  <p-autocomplete [(ngModel)]="nuevoEmpleado.Domicilio.Ciudad" [virtualScroll]="true" [suggestions]="filteredItemsCiudad" [virtualScrollItemSize]="34" (completeMethod)="filterItemsCiudad($event)" optionLabel="label" placeholder="Ciudad" [dropdown]="true" />
   </p-floatlabel>
   </div>
   
   <div class="label-container">
   <p-floatlabel>  
-    <p-autocomplete [(ngModel)]="CPSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" optionLabel="label" placeholder="Código Postal" [dropdown]="true" />
+    <p-autocomplete [(ngModel)]="nuevoEmpleado.Domicilio.CodigoPostal" [virtualScroll]="true" [suggestions]="filteredItemsCiudad" [virtualScrollItemSize]="34" (completeMethod)="filterItemsCiudad($event)" optionLabel="label" placeholder="Código Postal" [dropdown]="true" />
     </p-floatlabel>
   </div>
        
   <div class="label-container">
   <p-floatlabel variant="on">
-      <input pInputText id="on_label" autocomplete="off" pKeyFilter="alpha" />
+      <input pInputText  id="on_label" [(ngModel)]="nuevoEmpleado.Domicilio.Calle"  autocomplete="off" apppKeyFilter="alpha" />
       <label for="on_label">Calle</label>
   </p-floatlabel>
 </div>
+
 <div class="label-container">
   <p-floatlabel variant="on">
-    <input pInputText id="on_label" autocomplete="off" pKeyFilter="alpha" />
+    <input pInputText id="on_label" [(ngModel)]="nuevoEmpleado.Domicilio.Colonia" autocomplete="off" apppKeyFilter="alpha" />
     <label for="on_label">Colonia</label>
 </p-floatlabel>
 </div>
 
 <div class="label-container">
 <p-floatlabel variant="on">
-  <input pInputText id="on_label" autocomplete="off" pKeyFilter="num" />
+  <input pInputText id="on_label"  [(ngModel)]="nuevoEmpleado.Domicilio.NumeroExterior" autocomplete="off" apppKeyFilter="num" />
 <label for="on_label">No.Ext</label>
 </p-floatlabel>
 </div>
 <div class="label-container">
 <p-floatlabel variant="on">
-  <input pInputText id="on_label" autocomplete="off" pKeyFilter="num" />
+  <input pInputText id="on_label" [(ngModel)]="nuevoEmpleado.Domicilio.NumeroInterior" autocomplete="off" apppKeyFilter="num" />
 <label for="on_label">No.Int</label>
 </p-floatlabel>
 </div>
@@ -144,11 +156,9 @@
   </p-divider></h3>
   <h3>Familiares</h3>
 
-  <!-- Botón para agregar una nueva fila de dependiente -->
-  <button pButton label="Agregar Dependiente" (click)="agregarDependiente()" icon="pi pi-plus"></button>
-  
-  <!-- Tabla de familiares -->
-  <p-table [value]="dependientes" responsiveLayout="scroll">
+ 
+  <button pButton label="Agregar Familiar" (click)="nuevaReferenciaFamiliar()" icon="pi pi-plus"></button>
+  <p-table [value]="nuevoEmpleado.ReferenciaFamiliar" responsiveLayout="scroll">
     <ng-template pTemplate="header">
       <tr>
         <th>Nombre</th>
@@ -159,40 +169,40 @@
       </tr>
     </ng-template>
   
-    <ng-template pTemplate="body" let-dependiente let-i="rowIndex">
+    <ng-template pTemplate="body" let-referencia let-i="rowIndex">
       <tr>
         <td>
-          <input pInputText [(ngModel)]="dependiente.nombreFamiliar" placeholder="Nombre del familiar" />
+          <input pInputText [(ngModel)]="referencia.NombreFamiliar" placeholder="Nombre del familiar" />
         </td>
+  
         <td>
-          <input pInputText [(ngModel)]="dependiente.parentesco" placeholder="Parentesco" />
+          <p-auto-complete [(ngModel)]="referencia.Parentesco" [suggestions]="filteredItemsParentesco" 
+            (completeMethod)="filterItemsParentesco($event)" optionLabel="label" placeholder="Parentesco" [dropdown]="true" />
         </td>
+  
         <td>
-          <div *ngFor="let telefono of dependiente.telefonos; let j = index">
-            <input pInputText [(ngModel)]="dependiente.telefonos[j]" placeholder="Teléfono" />
+          <div *ngFor="let telefono of referencia.Telefono; let j = index">
+            <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="referencia.Telefono[j]"  placeholder="Teléfono" />
+            <button *ngIf="referencia.Telefono.length > 1" pButton label="Eliminar" (click)="eliminarTelefono(referencia, j)" icon="pi pi-minus" class="p-button-text"></button>
           </div>
-          <button pButton label="+" (click)="agregarTelefono(dependiente)" icon="pi pi-plus" class="p-button-text"></button>
+          <button pButton label="+" (click)="agregarTelefono(referencia)" icon="pi pi-plus" class="p-button-text"></button>
         </td>
+  
         <td>
-          <div *ngFor="let correo of dependiente.correos; let k = index">
-            <input pInputText [(ngModel)]="dependiente.correos[k]" placeholder="Correo" />
-          </div>
-          <button pButton label="+" (click)="agregarCorreo(dependiente)" icon="pi pi-plus" class="p-button-text"></button>
+          <input  type="email" pInputText [(ngModel)]="referencia.CorreoElectronico" placeholder="Correo Eléctronico"  />
         </td>
+  
         <td>
-
-            <!-- Botón Guardar -->
-            <button *ngIf="dependiente.editando" pButton type="button" (click)="guardarDependiente(dependiente)" icon="pi pi-check" class="p-button-success p-button-sm"></button>
-          
-          <button *ngIf="!dependiente.editando" pButton (click)="eliminarDependiente(i)" icon="pi pi-trash" class="p-button-danger"></button>
-          
+          <button pButton (click)="eliminarReferencia(i)" icon="pi pi-trash" class="p-button-danger"></button>
         </td>
       </tr>
     </ng-template>
   </p-table>
+  
  
-<div class="contenedor-botones">
-  <button class="boton" pButton pRipple aria-label="Buscar" severity="info" (click)="redirigir()">
-    <span pButtonLabel>Guardar</span>
-  </button>
-</div>
+  <div class="contenedor-botones">
+    <button class="boton" pButton pRipple aria-label="Buscar" severity="info" (click)="registrarEmpleado()">
+      <span pButtonLabel>Guardar</span>
+    </button>
+  </div>
+  
