--- a/src/app/modules/recursos-humanos/pages/crear-curso/crear-curso.component.html
+++ b/src/app/modules/recursos-humanos/pages/crear-curso/crear-curso.component.html
@@ -2,26 +2,25 @@
     <p-card header="Crear Nuevo Curso" subheader="Subtítulo" >
        
         <p-floatlabel  variant="on">
-          <input type="text" pInputText  id="nombreCurso" autocomplete="off"/>
-          <label for="nombre">Nombre del Curso</label>
+          <p-autocomplete [(ngModel)]="cursosSeleccionados" [virtualScroll]="true" [suggestions]="filteredItemsCursos" [virtualScrollItemSize]="34" (completeMethod)="filterItemsCursos($event)" filter="true" optionLabel="label" placeholder="Nombre del Curso" [dropdown]="true" />
       </p-floatlabel> 
 
   
       <p-floatlabel>  
-    <p-autocomplete [(ngModel)]="puestoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItems" [virtualScrollItemSize]="34" (completeMethod)="filterItems($event)" filter="true" optionLabel="label" placeholder="Tipo de documento obtenido" [dropdown]="true" />
+    <p-autocomplete [(ngModel)]="tipoDocumentoSeleccionado" [virtualScroll]="true" [suggestions]="filteredItemsTipoDocumento" [virtualScrollItemSize]="34" (completeMethod)="filterItemsTipoDocumento($event)" filter="true" optionLabel="label" placeholder="Tipo de documento obtenido" [dropdown]="true" />
     </p-floatlabel>
     
 
 <div class="label-container">
    <p-floatlabel variant="on">
-    <p-datepicker inputId="FechaNacimiento" showIcon iconDisplay="input" />
-    <label for="FechaNacimiento">Fecha de Inicio</label>
+    <p-datepicker [(ngModel)]="fechaInicio" inputId="FechaNacimiento" showIcon iconDisplay="input" />
+    <label for="FechaInicio">Fecha de Inicio</label>
 </p-floatlabel>
 </div>
 <div class="label-container">
     <p-floatlabel variant="on">
-     <p-datepicker inputId="FechaNacimiento" showIcon iconDisplay="input" />
-     <label for="FechaNacimiento">Fecha de Termino</label>
+     <p-datepicker [(ngModel)]="fechaTermino" inputId="FechaNacimiento" showIcon iconDisplay="input" />
+     <label for="FechaTermino">Fecha de Termino</label>
  </p-floatlabel>
  </div>
 
@@ -46,15 +45,15 @@
           </ng-template>
           <ng-template pTemplate="body" let-emp>
             <tr>
-              <td>{{ emp.clave }}</td>
-              <td>{{ emp.nombre }}</td>
+              <td>{{ emp.ClaveEmpleado }}</td>
+              <td>{{ emp.Nombre }}</td>
             </tr>
           </ng-template>
         </p-table>
         
     
     <div class="contenedor-botones">
-      <button class="boton" pButton pRipple aria-label="Buscar" severity="info" (click)="redirigir()">
+      <button class="boton" pButton pRipple aria-label="Buscar" severity="info" (click)="guardarCurso()">
         <span pButtonLabel>Guardar</span>
       </button>
     </div>
