--- a/src/app/modules/empleado/pages/perfil/perfil.component.html
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.html
@@ -1,4 +1,5 @@
 <div class="main-container">
+  <p-toast></p-toast>
   <p-card header="Mi perfil" subheader="Información personal">
     <!-- Bloque para cambiar contraseña -->
     <p-fieldset legend="Cambiar contraseña">
