--- a/src/app/shared/menu-lateral/menu-lateral.component.html
+++ b/src/app/shared/menu-lateral/menu-lateral.component.html
@@ -7,20 +7,16 @@
 <!-- Contenedor del menú -->
 <div *ngIf="isVisible" [ngClass]="{ 'w-64': !colapsado, 'w-0': colapsado, 'invisible': colapsado }" 
      class="menu-container fixed left-0 top-0 h-full bg-white shadow-lg transition-all duration-300 overflow-hidden">
-  <p-menu *ngIf="!colapsado" [model]="items"  class="w-full custom-menu" >
-    <ng-template #start>
+  <p-menu *ngIf="!colapsado" [model]="items" styleClass="w-full custom-menu">
+    <ng-template pTemplate="start">
         <span class="inline-flex items-center gap-1 px-2 py-2">
             <svg width="33" height="33" viewBox="0 0 33 35" fill="none">
                 <path d="..." fill="var(--primary-color)" />
             </svg>
-            
         </span>
     </ng-template>
-    <ng-template #submenuheader let-item>
-        <span class="text-primary font-bold">{{ item.label }}</span>
-    </ng-template>
-    <ng-template #item let-item>
-        <a pRipple class="flex items-center p-menu-item-link">
+    <ng-template pTemplate="item" let-item let-i="index">
+        <a pRipple *ngIf="item.visible !== false" class="flex items-center p-menu-item-link">
             <span [class]="item.icon"></span>
             <span class="ml-2">{{ item.label }}</span>
             <p-badge *ngIf="item.badge" class="ml-auto" [value]="item.badge" />
@@ -29,7 +25,7 @@
             </span>
         </a>
     </ng-template>
-    <ng-template #end>
+<!--     <ng-template pTemplate="end">
         <button pRipple class="relative overflow-hidden w-full border-0 bg-transparent flex items-start p-2 pl-4 hover:bg-surface-100 dark:hover:bg-surface-800 rounded-none cursor-pointer transition-colors duration-200">
             <p-avatar image="" class="mr-2" shape="circle" />
             <span class="inline-flex flex-col">
@@ -37,6 +33,6 @@
                 <span class="text-sm"></span>
             </span>
         </button>
-    </ng-template>
+    </ng-template> -->
   </p-menu>
 </div>
