style/Añadir importación faltante para el   mensaje si no se encuentran cursos internos o si no se agrega algún filtro

--- a/src/app/modules/recursos-humanos/pages/cursos-internos-list/cursos-internos-list.component.html
+++ b/src/app/modules/recursos-humanos/pages/cursos-internos-list/cursos-internos-list.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="main-container">
     <p-card header="Cursos Empresariales" subheader="Subtítulo">
       <!-- Filtros -->
@@ -38,7 +39,6 @@
           🔍 <span pButtonLabel>Aplicar Filtros</span>
         </button>
       </div>
-
   
       <!-- Tabla de cursos -->
       <p-table [value]="cursos" [tableStyle]="{ 'min-width': '50rem' }">
