--- a/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.html
+++ b/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.html
@@ -102,7 +102,19 @@
   </p-floatlabel>
 </div>
 
-
+<p-fieldset legend="Fotografía del Empleado">
+  <p-fileupload name="demo[]" url="https://www.primefaces.org/cdn/api/upload.php"
+    (onUpload)="onUpload($event)" [multiple]="true" accept="image/*" maxFileSize="1000000"
+    mode="advanced">
+    <ng-template #empty>
+      <div>Arrastra y suelta archivos aquí para subirlos.</div>
+    </ng-template>
+    <ng-template #content>
+      <ul *ngIf="uploadedFiles.length">
+        <li *ngFor="let file of uploadedFiles">{{ file.name }} - {{ file.size }} bytes</li>
+      </ul>
+    </ng-template>
+  </p-fileupload>
 
     </p-fieldset>
 
