--- a/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.scss
+++ b/src/app/modules/recursos-humanos/pages/crear-empleado/crear-empleado.component.scss
@@ -17,7 +17,7 @@
    
   }
 
-input,label,p-password,p-inputmask , p-autocomplete, p-datepicker {
+input,label,p-password,p-inputmask , p-autocomplete, p-datepicker{
     width: 80%; 
     box-sizing: border-box; /* Asegura que el padding no afecte el ancho */
     margin-left: 35px;
@@ -53,3 +53,9 @@ input,label,p-password,p-inputmask , p-autocomplete, p-datepicker {
   margin-left: 8px; /* Espacio entre el input y el botón */
 }
 
+.preview-img {
+  max-width: 150px;
+  max-height: 150px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
